microservices_project/k8s-mirco-project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: af66b5ca90b4c4034802c7708898b1bd-1231086095.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendsrv
                port:
                  number: 80
          - path: /student
            pathType: Prefix
            backend:
              service:
                name: backendsrv
                port:
                  number: 8080
